--- a/04-cifar10-cnn/04-cnn-practice.ipynb
+++ b/04-cifar10-cnn/04-cnn-practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "id": "ca083050-9858-46c1-b7aa-da531b07a65b",
    "metadata": {},
    "outputs": [],
@@ -39,14 +39,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading https://s3.amazonaws.com/fast-ai-imageclas/cifar10.tgz to ./cifar10.tgz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████| 135107811/135107811 [01:08<00:00, 1984456.87it/s]\n"
+      "Using downloaded and verified file: ./cifar10.tgz\n"
      ]
     }
    ],
@@ -58,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "43308f75-3743-4ed7-a5a5-5ccabcbbffff",
    "metadata": {},
    "outputs": [],
@@ -69,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "eadba91e-8e7c-4fc7-97af-58033fe022e2",
    "metadata": {},
    "outputs": [],
@@ -79,18 +72,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "dbcb8464-c000-4e78-9c83-41ce8cbacc3b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['test', 'train']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(os.listdir(data_dir))"
    ]
