--- a/04-cifar10-cnn/04-cifar10-cnn.ipynb
+++ b/04-cifar10-cnn/04-cifar10-cnn.ipynb
@@ -1488,6 +1488,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "executionInfo": {
+     "elapsed": 1420,
+     "status": "ok",
+     "timestamp": 1607747364977,
+     "user": {
+      "displayName": "Aakash N S",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GiIWFHtan62vtW1gz2Bv2bxL3rppefcadxzEVxRKQ=s64",
+      "userId": "03254185060287524023"
+     },
+     "user_tz": -330
+    },
+    "id": "WgbZ6gLOJp_Q"
+   },
+   "outputs": [],
+   "source": [
+    "class ImageClassificationBase(nn.Module):\n",
+    "    def training_step(self, batch):\n",
+    "        images, labels = batch \n",
+    "        out = self(images)                  # Generate predictions\n",
+    "        loss = F.cross_entropy(out, labels) # Calculate loss\n",
+    "        return loss\n",
+    "    \n",
+    "    def validation_step(self, batch):\n",
+    "        images, labels = batch \n",
+    "        out = self(images)                    # Generate predictions\n",
+    "        loss = F.cross_entropy(out, labels)   # Calculate loss\n",
+    "        acc = accuracy(out, labels)           # Calculate accuracy\n",
+    "        return {'val_loss': loss.detach(), 'val_acc': acc}\n",
+    "        \n",
+    "    def validation_epoch_end(self, outputs):\n",
+    "        batch_losses = [x['val_loss'] for x in outputs]\n",
+    "        epoch_loss = torch.stack(batch_losses).mean()   # Combine losses\n",
+    "        batch_accs = [x['val_acc'] for x in outputs]\n",
+    "        epoch_acc = torch.stack(batch_accs).mean()      # Combine accuracies\n",
+    "        return {'val_loss': epoch_loss.item(), 'val_acc': epoch_acc.item()}\n",
+    "    \n",
+    "    def epoch_end(self, epoch, result):\n",
+    "        print(\"Epoch [{}], train_loss: {:.4f}, val_loss: {:.4f}, val_acc: {:.4f}\".format(\n",
+    "            epoch, result['train_loss'], result['val_loss'], result['val_acc']))\n",
+    "        \n",
+    "def accuracy(outputs, labels):\n",
+    "    _, preds = torch.max(outputs, dim=1)\n",
+    "    return torch.tensor(torch.sum(preds == labels).item() / len(preds))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "rw-AyZcjJp_Q"
@@ -3010,7 +3059,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.18"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
