--- a/04-cifar10-cnn/04-cnn-practice.ipynb
+++ b/04-cifar10-cnn/04-cnn-practice.ipynb
@@ -648,36 +648,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 86,
    "id": "d7a601d1-06ef-400a-9472-97aa5ba484b1",
    "metadata": {},
    "outputs": [],
    "source": [
     "class ImageClassificationBase(nn.Module):\n",
     "    def training_step(self, batch):\n",
-    "        imgs, labels = batch\n",
-    "        out = self(imgs)\n",
-    "        loss = F.cross_entropy(out, labels)\n",
+    "        images, labels = batch \n",
+    "        out = self(images)                  # Generate predictions\n",
+    "        loss = F.cross_entropy(out, labels) # Calculate loss\n",
     "        return loss\n",
-    "\n",
+    "    \n",
     "    def validation_step(self, batch):\n",
-    "        imgs, labels = batch\n",
-    "        out = self(imgs)\n",
-    "        loss = F.cross_entropy(out, labels)\n",
-    "        acc = accuracy(out, labels)\n",
-    "        return {\"val_loss: \", loss.detach(), \"val_acc: \", acc}\n",
-    "\n",
+    "        images, labels = batch \n",
+    "        out = self(images)                    # Generate predictions\n",
+    "        loss = F.cross_entropy(out, labels)   # Calculate loss\n",
+    "        acc = accuracy(out, labels)           # Calculate accuracy\n",
+    "        return {'val_loss': loss.detach(), 'val_acc': acc}\n",
+    "        \n",
     "    def validation_epoch_end(self, outputs):\n",
-    "        batch_losses = [x[\"val_loss\"] for x in outputs]\n",
-    "        epoch_loss = torch.stack(batch_losses).mean()\n",
-    "        batch_accs = [x[\"val_acc\"] for x in outputs]\n",
-    "        epoch_acc = torch.stack(batch_accs).mean()\n",
-    "        return {\"val_loss\": epoch_loss.item(), \"val_acc\": epoch_acc.item()}\n",
-    "\n",
+    "        batch_losses = [x['val_loss'] for x in outputs]\n",
+    "        epoch_loss = torch.stack(batch_losses).mean()   # Combine losses\n",
+    "        batch_accs = [x['val_acc'] for x in outputs]\n",
+    "        epoch_acc = torch.stack(batch_accs).mean()      # Combine accuracies\n",
+    "        return {'val_loss': epoch_loss.item(), 'val_acc': epoch_acc.item()}\n",
+    "    \n",
     "    def epoch_end(self, epoch, result):\n",
     "        print(\"Epoch [{}], train_loss: {:.4f}, val_loss: {:.4f}, val_acc: {:.4f}\".format(\n",
-    "            epoch, result[\"train_loss\"], result[\"val_loss\"], result[\"val_acc\"]\n",
-    "        ))"
+    "            epoch, result['train_loss'], result['val_loss'], result['val_acc']))"
    ]
   },
   {
@@ -940,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "e5d576cd",
+   "id": "25fdb130",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "3417e9b5",
+   "id": "2d196be8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,7 +961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4134b27",
+   "id": "1195a48c",
    "metadata": {},
    "source": [
     "# Model training"
@@ -971,7 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "7f30adf5",
+   "id": "c30ba06a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,7 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "6afabafe",
+   "id": "9bce18dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1025,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "01688a7f",
+   "id": "bc691994",
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "aa2f8eaa",
+   "id": "ab6b8184",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,8 +1054,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "ae29cbc5",
+   "execution_count": 87,
+   "id": "400a139d",
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1065,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[85], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m evaluate(model, val_dl)\n",
+      "Cell \u001b[0;32mIn[87], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m evaluate(model, val_dl)\n",
       "File \u001b[0;32m~/Workstation/Anaconda/anaconda/envs/torch/lib/python3.11/site-packages/torch/utils/_contextlib.py:115\u001b[0m, in \u001b[0;36mcontext_decorator.<locals>.decorate_context\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    112\u001b[0m \u001b[38;5;129m@functools\u001b[39m\u001b[38;5;241m.\u001b[39mwraps(func)\n\u001b[1;32m    113\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdecorate_context\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m    114\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m ctx_factory():\n\u001b[0;32m--> 115\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m func(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
       "Cell \u001b[0;32mIn[80], line 10\u001b[0m, in \u001b[0;36mevaluate\u001b[0;34m(model, val_loader)\u001b[0m\n\u001b[1;32m      8\u001b[0m model\u001b[38;5;241m.\u001b[39meval()  \u001b[38;5;66;03m# set model to evaluation mode\u001b[39;00m\n\u001b[1;32m      9\u001b[0m outputs \u001b[38;5;241m=\u001b[39m [model\u001b[38;5;241m.\u001b[39mvalidation_step(batch) \u001b[38;5;28;01mfor\u001b[39;00m batch \u001b[38;5;129;01min\u001b[39;00m val_loader]\n\u001b[0;32m---> 10\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m model\u001b[38;5;241m.\u001b[39mvalidation_epoch_end(outputs)\n",
       "Cell \u001b[0;32mIn[31], line 16\u001b[0m, in \u001b[0;36mImageClassificationBase.validation_epoch_end\u001b[0;34m(self, outputs)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mvalidation_epoch_end\u001b[39m(\u001b[38;5;28mself\u001b[39m, outputs):\n\u001b[0;32m---> 16\u001b[0m     batch_losses \u001b[38;5;241m=\u001b[39m [x[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mval_loss\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m outputs]\n\u001b[1;32m     17\u001b[0m     epoch_loss \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mstack(batch_losses)\u001b[38;5;241m.\u001b[39mmean()\n\u001b[1;32m     18\u001b[0m     batch_accs \u001b[38;5;241m=\u001b[39m [x[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mval_acc\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m outputs]\n",
@@ -1082,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62dbb24c",
+   "id": "aa700c46",
    "metadata": {},
    "outputs": [],
    "source": []
