laptop update, stpped at model saving

--- a/04-cifar10-cnn/04-cnn-practice.ipynb
+++ b/04-cifar10-cnn/04-cnn-practice.ipynb
@@ -1466,11 +1466,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "a67bcf0b-773b-4a4b-81d1-4eeb8ae92fa0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'val_loss': 0.9014226794242859, 'val_acc': 0.7724609375}"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_loader = DeviceDataLoader(DataLoader(test_dataset, batch_size*2), device)\n",
+    "result = evaluate(model, test_loader)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8475690-c8f6-4cb4-97d2-6d9bb1cc559a",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c441d12e-1603-4d09-8e12-4ddc5d2a5eff",
+   "metadata": {},
+   "source": [
+    "# Model saving and loading\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f8a1285-83e8-4355-abed-cbb258242acd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model.state_dict(), \"cifar10-cnn.pth\")"
+   ]
   }
  ],
  "metadata": {
