--- a/05b-cifar10-resnet/05-optimization-practice.ipynb
+++ b/05b-cifar10-resnet/05-optimization-practice.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c6ab3518",
+   "id": "8b674a03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8a042a44",
+   "id": "41b3c615",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "43606dec",
+   "id": "69c25573",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c428e199",
+   "id": "3f312980",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "bbdde79b",
+   "id": "e1b40d20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "38ea165b",
+   "id": "79185fcf",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a061f034",
+   "id": "a0cc6cb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7531001b",
+   "id": "3bcb8201",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "817f20a8",
+   "id": "c4d61c8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a0921784",
+   "id": "3dc6a6f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d783d9d0",
+   "id": "9726cab3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "08f80340",
+   "id": "9a94eb05",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "6ae3e1d3",
+   "id": "06e58e32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "42e95fee",
+   "id": "12acabc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a9839c08",
+   "id": "19583c5e",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d80329c7",
+   "id": "ba03b239",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,16 +298,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81b4587e",
+   "id": "f2aa6592",
    "metadata": {},
    "source": [
-    "# Resnet"
+    "# Resnet \n",
+    "https://github.com/JayPatwardhan/ResNet-PyTorch/tree/master/ResNet"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "0a1dcdb5",
+   "id": "88537247",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "4a60b34b",
+   "id": "1b2ca983",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "1dae6bbb",
+   "id": "1a667696",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d32fdaf",
+   "id": "dc0c82b5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -391,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "5f8167a0",
+   "id": "c5bffb13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "2b741021",
+   "id": "21c6adc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1617e301",
+   "id": "c2845c82",
    "metadata": {},
    "outputs": [],
    "source": [
