--- a/05b-cifar10-resnet/05b-cifar10-resnet.ipynb
+++ b/05b-cifar10-resnet/05b-cifar10-resnet.ipynb
@@ -50,7 +50,10 @@
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a",
     "collapsed": true,
-    "id": "Q_uYP4-E3KUW"
+    "id": "Q_uYP4-E3KUW",
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "### How to run the code\n",
@@ -1906,7 +1909,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.18"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
@@ -2159,5 +2162,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
