laptop update, tested squeeze and unsqueeze

--- a/05b-cifar10-resnet/05-optimization-practice.ipynb
+++ b/05b-cifar10-resnet/05-optimization-practice.ipynb
@@ -150,6 +150,134 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "66d0128e-6cb2-447a-93ab-7fb6fad12177",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(val_ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d2f7dd95-f5eb-4c8a-9e71-f0c98c392ca1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torchvision.datasets.folder.ImageFolder"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(val_ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "602c2e8b-7bbd-4892-80b9-591c5d984b6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([3, 32, 32])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_ds[0][0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "25630616-e30f-442a-b824-9d243d17a53e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 32, 32]) torch.Size([1, 3, 32, 32])\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "img, label = val_ds[0]\n",
+    "print(img.shape, img.unsqueeze(0).shape)\n",
+    "print(label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "59f66115-1786-40f4-8c9c-847dee12d97d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda:0\n"
+     ]
+    }
+   ],
+   "source": [
+    "if isinstance(img.unsqueeze(0), (list, tuple)):\n",
+    "    print(\"yes\")\n",
+    "else:\n",
+    "    img_out = img.unsqueeze(0).to(\"cuda\", non_blocking=True)\n",
+    "    print(img_out.device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f01f094-59e6-4963-a38d-119b659554e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def to_device(data, device):\n",
+    "    if isinstance(data, (list, tuple)):\n",
+    "        return [to_device(x, device) for x in data]\n",
+    "    return data.to(device, non_blocking=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2206ffc7-3769-4c0f-9c27-576cbc2f1fa0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "id": "c4d61c8f",
    "metadata": {},
@@ -217,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "id": "06e58e32",
    "metadata": {},
    "outputs": [],
@@ -236,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "id": "12acabc1",
    "metadata": {},
    "outputs": [],
@@ -257,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "id": "19583c5e",
    "metadata": {},
    "outputs": [
@@ -267,7 +395,7 @@
        "device(type='cuda')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +420,9 @@
   {
    "cell_type": "markdown",
    "id": "f2aa6592",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Resnet \n",
     "https://github.com/JayPatwardhan/ResNet-PyTorch/tree/master/ResNet\n",
